// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`V7-025 lifecycle action cards > CompoundCardRenderer renders pending rewards + CTA 1`] = `
<DocumentFragment>
  <div
    class="rounded-xl border border-emerald-500/30 bg-gradient-to-br from-slate-900 via-slate-900/95 to-emerald-950/40 p-4 shadow-lg"
    data-testid="compound-card"
  >
    <div
      class="flex items-center justify-between gap-3"
    >
      <div
        class="min-w-0"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-coins h-4 w-4 text-emerald-300"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="8"
              cy="8"
              r="6"
            />
            <path
              d="M18.09 10.37A6 6 0 1 1 10.34 18"
            />
            <path
              d="M7 6h1v4"
            />
            <path
              d="m16.71 13.88.7.71-2.82 2.82"
            />
          </svg>
          <span
            class="text-base font-semibold text-slate-100"
          >
            Uniswap V3
          </span>
          <span
            class="rounded-md border border-emerald-500/30 bg-emerald-500/10 px-1.5 py-0.5 text-[10px] uppercase tracking-wide text-emerald-300"
          >
            Compound
          </span>
        </div>
        <div
          class="mt-0.5 truncate font-mono text-xs text-slate-400"
          title="uni-v3-0xabc"
        >
          uni-v3-0xabc
        </div>
      </div>
    </div>
    <div
      class="mt-3 grid grid-cols-2 gap-2"
    >
      <div
        class="rounded-lg border border-slate-800 bg-slate-900/60 px-3 py-2"
      >
        <div
          class="text-[10px] uppercase tracking-wide text-slate-500"
        >
          Pending Rewards
        </div>
        <div
          class="mt-0.5 flex items-center gap-1 text-sm font-semibold text-emerald-300"
        >
          <svg
            class="lucide lucide-trending-up h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="22 7 13.5 15.5 8.5 10.5 2 17"
            />
            <polyline
              points="16 7 22 7 22 13"
            />
          </svg>
          $123.45
        </div>
      </div>
      <div
        class="rounded-lg border border-slate-800 bg-slate-900/60 px-3 py-2"
      >
        <div
          class="text-[10px] uppercase tracking-wide text-slate-500"
        >
          UNI
        </div>
        <div
          class="mt-0.5 text-sm font-semibold text-slate-200"
        >
          12.5000 UNI
        </div>
      </div>
    </div>
    <button
      class="mt-3 flex w-full items-center justify-center rounded-lg border px-4 py-3 text-sm font-semibold transition border-emerald-500/40 bg-emerald-500/15 text-emerald-300 hover:bg-emerald-500/25"
      type="button"
    >
      Compound rewards
    </button>
  </div>
</DocumentFragment>
`;

exports[`V7-025 lifecycle action cards > MigrateCardRenderer renders from/to protocols + APR delta 1`] = `
<DocumentFragment>
  <div
    class="rounded-xl border border-cyan-500/30 bg-gradient-to-br from-slate-900 via-slate-900/95 to-cyan-950/40 p-4 shadow-lg"
    data-testid="migrate-card"
  >
    <div
      class="flex items-center justify-between gap-3"
    >
      <div
        class="min-w-0"
      >
        <div
          class="flex items-center gap-2 text-base font-semibold text-slate-100"
        >
          <span>
            Compound V2
          </span>
          <svg
            class="lucide lucide-arrow-right h-4 w-4 text-cyan-300"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
          <span>
            Aave V3
          </span>
          <span
            class="rounded-md border border-cyan-500/30 bg-cyan-500/10 px-1.5 py-0.5 text-[10px] uppercase tracking-wide text-cyan-300"
          >
            Migrate
          </span>
        </div>
        <div
          class="mt-0.5 truncate text-sm font-medium text-slate-200"
        >
          USDC supply
        </div>
        <div
          class="mt-0.5 truncate font-mono text-xs text-slate-400"
          title="comp-v2-0x123"
        >
          comp-v2-0x123
        </div>
      </div>
    </div>
    <div
      class="mt-3 grid grid-cols-3 gap-2"
    >
      <div
        class="rounded-lg border border-slate-800 bg-slate-900/60 px-3 py-2"
      >
        <div
          class="text-[10px] uppercase tracking-wide text-slate-500"
        >
          Current APR
        </div>
        <div
          class="mt-0.5 text-sm font-semibold text-slate-300"
        >
          2.50%
        </div>
      </div>
      <div
        class="rounded-lg border border-cyan-500/30 bg-cyan-500/10 px-3 py-2"
      >
        <div
          class="text-[10px] uppercase tracking-wide text-cyan-400"
        >
          Target APR
        </div>
        <div
          class="mt-0.5 flex items-center gap-1 text-sm font-semibold text-cyan-200"
        >
          <svg
            class="lucide lucide-trending-up h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="22 7 13.5 15.5 8.5 10.5 2 17"
            />
            <polyline
              points="16 7 22 7 22 13"
            />
          </svg>
          5.75%
        </div>
      </div>
      <div
        class="rounded-lg border border-slate-800 bg-slate-900/60 px-3 py-2"
      >
        <div
          class="text-[10px] uppercase tracking-wide text-slate-500"
        >
          Gas Est.
        </div>
        <div
          class="mt-0.5 flex items-center gap-1 text-sm font-semibold text-slate-200"
        >
          <svg
            class="lucide lucide-fuel h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="3"
              x2="15"
              y1="22"
              y2="22"
            />
            <line
              x1="4"
              x2="14"
              y1="9"
              y2="9"
            />
            <path
              d="M14 22V4a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v18"
            />
            <path
              d="M14 13h2a2 2 0 0 1 2 2v2a2 2 0 0 0 2 2h0a2 2 0 0 0 2-2V9.83a2 2 0 0 0-.59-1.42L18 5"
            />
          </svg>
          $12.40
        </div>
      </div>
    </div>
    <div
      class="mt-2 rounded-lg border border-emerald-500/30 bg-emerald-500/10 px-3 py-2 text-xs text-emerald-300"
    >
      Net APR uplift: 
      <span
        class="font-semibold"
      >
        +3.25%
      </span>
    </div>
    <button
      class="mt-3 flex w-full items-center justify-center rounded-lg border border-cyan-500/40 bg-cyan-500/15 px-4 py-3 text-sm font-semibold text-cyan-200 transition hover:bg-cyan-500/25"
      type="button"
    >
      Migrate position
    </button>
  </div>
</DocumentFragment>
`;

exports[`V7-025 lifecycle action cards > RebalanceCardRenderer renders ranges + uplift 1`] = `
<DocumentFragment>
  <div
    class="rounded-xl border border-violet-500/30 bg-gradient-to-br from-slate-900 via-slate-900/95 to-violet-950/40 p-4 shadow-lg"
    data-testid="rebalance-card"
  >
    <div
      class="flex items-center justify-between gap-3"
    >
      <div
        class="min-w-0"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-repeat h-4 w-4 text-violet-300"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m17 2 4 4-4 4"
            />
            <path
              d="M3 11v-1a4 4 0 0 1 4-4h14"
            />
            <path
              d="m7 22-4-4 4-4"
            />
            <path
              d="M21 13v1a4 4 0 0 1-4 4H3"
            />
          </svg>
          <span
            class="text-base font-semibold text-slate-100"
          >
            Uniswap V3
          </span>
          <span
            class="rounded-md border border-violet-500/30 bg-violet-500/10 px-1.5 py-0.5 text-[10px] uppercase tracking-wide text-violet-300"
          >
            Rebalance
          </span>
        </div>
        <div
          class="mt-0.5 truncate text-sm font-medium text-slate-200"
        >
          WETH/USDC
        </div>
        <div
          class="mt-0.5 truncate font-mono text-xs text-slate-400"
          title="uni-v3-token-12345"
        >
          uni-v3-token-12345
        </div>
      </div>
      <div
        class="flex items-center gap-1 rounded-md border border-amber-500/30 bg-amber-500/10 px-2 py-1 text-xs font-medium text-amber-300"
      >
        <svg
          class="lucide lucide-triangle-alert h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <span>
          42.50% OOR
        </span>
      </div>
    </div>
    <div
      class="mt-3 grid grid-cols-2 gap-2"
    >
      <div
        class="rounded-lg border border-slate-800 bg-slate-900/60 px-3 py-2"
      >
        <div
          class="text-[10px] uppercase tracking-wide text-slate-500"
        >
          Current Range
        </div>
        <div
          class="mt-0.5 text-sm font-semibold text-slate-200"
        >
          1800.00 – 2200.00
        </div>
      </div>
      <div
        class="rounded-lg border border-violet-500/30 bg-violet-500/10 px-3 py-2"
      >
        <div
          class="text-[10px] uppercase tracking-wide text-violet-400"
        >
          Suggested Range
        </div>
        <div
          class="mt-0.5 text-sm font-semibold text-violet-200"
        >
          2000.00 – 2400.00
        </div>
      </div>
    </div>
    <div
      class="mt-2 grid grid-cols-2 gap-2"
    >
      <div
        class="rounded-lg border border-slate-800 bg-slate-900/60 px-3 py-2"
      >
        <div
          class="text-[10px] uppercase tracking-wide text-slate-500"
        >
          Position Value
        </div>
        <div
          class="mt-0.5 text-sm font-semibold text-slate-200"
        >
          $5.43K
        </div>
      </div>
      <div
        class="rounded-lg border border-slate-800 bg-slate-900/60 px-3 py-2"
      >
        <div
          class="text-[10px] uppercase tracking-wide text-slate-500"
        >
          Fee APR Uplift
        </div>
        <div
          class="mt-0.5 flex items-center gap-1 text-sm font-semibold text-emerald-300"
        >
          <svg
            class="lucide lucide-trending-up h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="22 7 13.5 15.5 8.5 10.5 2 17"
            />
            <polyline
              points="16 7 22 7 22 13"
            />
          </svg>
          +3.21%
        </div>
      </div>
    </div>
    <button
      class="mt-3 flex w-full items-center justify-center rounded-lg border border-violet-500/40 bg-violet-500/15 px-4 py-3 text-sm font-semibold text-violet-200 transition hover:bg-violet-500/25"
      type="button"
    >
      Rebalance position
    </button>
  </div>
</DocumentFragment>
`;
